filer/private/sass/components/_navigator.scss
/* ... */
.navigator-top-nav {
    position: relative;
    clear: both;
    min-height: 34px;
    padding: 15px 20px;
    background: $gray-table;
    border-bottom: $gray-lighter solid 1px;
    .breadcrumbs-container-wrapper {
        display: table;
        width: 100%;
        @media screen and (max-width: $screen-tablet) {
            display: block;
        }
    }
    .breadcrumbs-container-inner {
        display: table;
        table-layout: fixed;
        width: 100%;
        .filer-dropdown-container {
            display: table-cell;
            width: 30px;
            vertical-align: middle;
        }
    }
    .breadcrumbs-container {
        display: table-cell;
        vertical-align: middle;
        @media screen and (max-width: $screen-tablet) {
            position: static;
            margin-right: 20px;
        }
    }
    .tools-container {
        @include clearfix;
        display: table-cell;
        vertical-align: middle;
        text-align: right;
        margin-top: 2px;
        @media screen and (max-width: $screen-tablet) {
            display: inline;
            text-align: left;
        }
    }
    .nav-button {
        display: inline-block;
        color: $gray;
        font-size: 20px;
        line-height: 34px;
        vertical-align: top;
        margin: 0 10px;
        span {
            vertical-align: middle;
        }
    }
    .nav-button-filter {
        position: relative;
        top: -1px;
    }
    .nav-button-dots {
        margin: 0;
        padding: 0 15px;
    }
    .separator {
        display: inline-block;
        position: relative;
        vertical-align: top;
        width: 1px;
        height: 34px;
        margin: 0 5px;
        &:before {
            content: "";
            display: block;
            position: absolute;
            top: -14px;
            bottom: -11px;
            overflow: hidden;
            width: 1px;
            background-color: #ccc;
        }
    }
}
.breadcrumb-min-width {
    .filer-navigator-breadcrumbs-dropdown-container,
    .navigator-breadcrumbs-name-dropdown-wrapper,
    .navigator-breadcrumbs-folder-name-wrapper,
    .breadcrumbs-container-wrapper,
    .breadcrumbs-container,
    .tools-container,
    .filter-files-container,
    .navigator-breadcrumbs,
    .navigator-button-wrapper {
        display: inline-block;
        text-align: left;
        .actions-wrapper {
            margin-left: 0;
            margin-bottom: 10px;
            li:first-child {
                padding-left: 0;
            }
        }
    }
    .breadcrumbs-container-inner .filer-dropdown-container {
       display: inline-block !important;
    }
    .navigator-tools {
        white-space: normal;
    }
    .filter-files-container {
        width: 100%;
        margin-top: 10px;
        z-index: auto;
    }
    .breadcrumbs-container {
        margin-right: 0;
    }
    .navigator-breadcrumbs .icon {
        vertical-align: middle;
    }
    .navigator-breadcrumbs-folder-name-wrapper {
        float: left;
        width: calc(100% - 30px);
    }
    .navigator-breadcrumbs-folder-name {
        margin-top: 5px;
    }
    .filer-navigator-breadcrumbs-dropdown-container {
        margin-top: 0;
    }
}
.navigator-tools {
    @include clearfix;
    white-space: nowrap;
    @media screen and (max-width: $screen-tablet) {
        display: inline;
    }
    .actions-wrapper {
        display: inline-block;
        margin-bottom: 0;
        margin-left: 10px;
        a, a:hover {
            color: $gray-light !important;
            cursor: not-allowed;
        }
        @media screen and (max-width: $screen-tablet) {
            @include clearfix();
            float: none;
            margin-left: 0;
        }
        &.action-selected {
            a {
                color: $gray !important;
                cursor: pointer;
            }
            @media screen and (max-width: $screen-tablet) {
               float: left;
            }
            .actions-separated-list {
                display: inline-block;
            }
        }
    }
    .actions {
        display: none;
        float: right;
        @media screen and (max-width: $screen-tablet) {
            @include clearfix();
            float: none;
            margin-bottom: 10px;
        }
        .all,
        .question,
        .clear,
        .action-counter {
            font-size: $font-size-small;
            line-height: 34px;
            vertical-align: text-top;
        }
        .action-counter,
        .all {
            color: $gray-light;
        }
        .question,
        .clear {
            margin-left: 10px;
            padding-left: 10px;
            border-left: solid 1px $gray-lighter;
        }
    }
}
@media screen and (max-width: $screen-tablet) {
    .navigator-top-nav {
        .breadcrumbs-container {
            float: none;
        }
        .navigator-tools {
            float: none;
            .separator:before {
                top: 0;
                bottom: 0;
            }
        }
    }
}
// make sure that buttons break to new line on mobile view #677
.navigator-button-wrapper {
    display: inline-block;
    vertical-align: top;
    text-align: right;
    margin-bottom: 0;
    margin-left: 10px;
    @media screen and (max-width: $screen-tablet) {
        display: block;
        float: none;
        text-align: left;
        margin-top: 0;
        margin-left: 0;
    }
}
.navigator-button {
    margin-right: 10px;
    &,
    &:visited,
    &:link:visited,
    &:link {
        @include button-variant($btn-action-color, $btn-action-bgcolor, $btn-action-border, true);
        display: inline-block;
        vertical-align: top;
        padding: 10px 20px !important;
    }
    .icon {
        position: relative;
        margin-right: 5px;
    }
    .fa-folder {
        top: 0;
    }
    &.navigator-button-upload {
        margin-right: 0;
    }
}

.upload-button-disabled {
    display: inline-block;
}
/* ... */

